@@ -1,3 +1,4 @@
+* Apply factor on domain parser
 * Use tab name in CSV Export/Import
 * Add bus management
 * Load custom CSS and Javascript
